# ai-investment-analyst

./: .env.example  .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  requirements.txt
docs/plans/: 2026-04-21-analyst-style-stock-report.md  2026-04-21-railway-web-app.md
openspec/changes/ai-investment-analyst-db/: design.md  proposal.md  tasks.md
openspec/changes/ai-investment-analyst-db/sql/: 001_initial_schema.sql  002_seed_markets.sql
openspec/changes/multi-source-price-strategy/: design.md  proposal.md  tasks.md
openspec/changes/stock-analysis-report/: design.md  proposal.md  tasks.md
scripts/: apply_financial_statement_schema.py  apply_monthly_revenue_schema.py  apply_multi_source_price_schema.py  apply_schema.py  generate_stock_report.py  load_finlab_price.py  load_finmind_financials.py  load_finmind_monthly_revenue.py  load_finmind_tw_price.py  load_yfinance_latest.py  verify_price_sources.py
src/ai_investment_analyst/: config.py
src/ai_investment_analyst/analysis/: __init__.py  llm.py  news.py  stock_report.py
src/ai_investment_analyst/db/: connection.py  price_store.py
src/ai_investment_analyst/etl/: finlab_loader.py  finmind_financial_loader.py  finmind_loader.py  finmind_monthly_revenue_loader.py  yfinance_loader.py
src/ai_investment_analyst/web/: app.py
tests/analysis/: test_generate_stock_report_flow.py  test_llm.py  test_news.py  test_stock_report.py  test_stock_report_context.py
tests/web/: test_auth.py  test_health.py  test_index_page.py  test_report_api.py  test_report_html.py
(+8 files in other folders)
